# backend/docs/swagger.yaml
@@ -1,35 +1,37 @@
 basePath: /api
 definitions:
-  entity.JoinRoomRequest:
+  entity.JoinMeetingRequest:
     properties:
-      room_id:
+      meeting_id:
         type: string
       user_name:
         type: string
     type: object
-  entity.JoinRoomResponse:
+  entity.JoinMeetingResponse:
     properties:
-      room_id:
+      meeting_id:
         type: string
       user_id:
         type: string
-      users_in_room:
+      users_in_meeting:
         items:
           type: string
         type: array
     type: object
-  entity.LeaveRoomRequest:
+  entity.LeaveMeetingRequest:
     properties:
-      room_id:
+      meeting_id:
         type: string
       user_id:
         type: string
     type: object
-  entity.Room:
+  entity.Meeting:
     properties:
       created_at:
         type: string
-      room_id:
+      meeting_id:
+        type: string
+      meeting_name:
         type: string
       users:
         items:
@@ -69,13 +71,13 @@ paths:
       summary: Check server health
       tags:
       - common
-  /room/{room_id}/info:
+  /meeting/{meeting_id}/info:
     get:
-      description: Get room information and users list
+      description: Get meeting information and users list
       parameters:
-      - description: Room ID
+      - description: Meeting ID
         in: path
-        name: room_id
+        name: meeting_id
         required: true
         type: string
       produces:
@@ -84,7 +86,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.Room'
+            $ref: '#/definitions/entity.Meeting'
         "400":
           description: Bad Request
           schema:
@@ -97,16 +99,16 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/v1.response'
-      summary: Get room info
+      summary: Get meeting info
       tags:
-      - rooms
-  /room/{room_id}/ws:
+      - meetings
+  /meeting/{meeting_id}/ws:
     get:
       description: WebSocket endpoint для обмена WebRTC сигналами
       parameters:
-      - description: Room ID
+      - description: Meeting ID
         in: path
-        name: room_id
+        name: meeting_id
         required: true
         type: string
       - description: User ID
@@ -118,25 +120,25 @@ paths:
       summary: WebSocket для сигналинга
       tags:
       - websocket
-  /room/join:
+  /meeting/join:
     post:
       consumes:
       - application/json
-      description: Create a new room or join existing one
+      description: Create a new meeting or join existing one
       parameters:
-      - description: Join room request
+      - description: Join meeting request
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/entity.JoinRoomRequest'
+          $ref: '#/definitions/entity.JoinMeetingRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.JoinRoomResponse'
+            $ref: '#/definitions/entity.JoinMeetingResponse'
         "400":
           description: Bad Request
           schema:
@@ -145,21 +147,21 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/v1.response'
-      summary: Join or create room
+      summary: Join or create meeting
       tags:
-      - rooms
-  /room/leave:
+      - meetings
+  /meeting/leave:
     post:
       consumes:
       - application/json
-      description: Leave the room
+      description: Leave the meeting
       parameters:
-      - description: Leave room request
+      - description: Leave meeting request
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/entity.LeaveRoomRequest'
+          $ref: '#/definitions/entity.LeaveMeetingRequest'
       produces:
       - application/json
       responses:
@@ -175,9 +177,9 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/v1.response'
-      summary: Leave room
+      summary: Leave meeting
       tags:
-      - rooms
+      - meetings
 schemes:
 - https
 - http
